- Router factory now only specifies middleware type. 
- Router now uses O(1) hash map lookup for endpoint matching.
- Collection now stores values internally with key-based O(1) lookup.
- AuthSlave now calls session_start() only when needed, improving performance.
- DataSlave now supports persistent PDO connections for better performance.
- Types now live inside a new namespace. \FastRaven\Types

#### Fixed
- Logs are not being stored inside storage directory.
- AuthWorker::autologin() produces a timing attack vulnerability.

#### Removed
- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
- getDataItem() method from Request component is getting deprecated.
- getOriginInfo() method from Request component.
- Permissions-Policy meta tag from main.php template.
- initializeServer() method from Server class.
- preload(...) method from Server class.
- isApi() method from Request component.
- configureSecurity(...) method from Config class.

---

### [v0.3] - 2025-12-17
#### Added
- Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
- Collection and Item components for handling key-value pair arrays.
- ValidationWorker for validating data such as email addresses or passwords.
- ValidationFlags collection for handling validation flags.
- API Response success boolean field.
- AlreadyAuthorizedException for handling unauthorized exclusive endpoints.
- Endpoint argument unauthorizedExclusive for handling unauthorized exclusive endpoints.
- LogWorker::debug() for debugging system logs.
- MailWorker for sending crafted and dynamic emails.
- Mail component for crafting mail objects.
- Item::mail and Item::file for helping with Mail crafting.
- AUTH_DOMAIN env variable for defining global authorization domain.
- Config::configureSecurity(...) for defining security policies against DDoS attacks and input length. 